# ModelHIV-PH

./: .gitattributes  .gitignore  README.md  pyproject.toml
docs/: codex_memory_country_portability.md  codex_memory_disease_plugin_portability.md  codex_memory_full_pipeline_context_phase0_to_phase4.md  codex_memory_hiv_first_rescue_plan.md  codex_memory_hpc_upgrade_plan.md  codex_memory_math_and_formalism_phase0_to_phase4.md  codex_memory_phase0_cold_start_playbook.md  codex_memory_phase0_embedding_and_silos.md  codex_memory_subgroup_topology_and_state_space.md  codex_memory_syndemic_coupling.md  codex_memory_syndemic_coupling_evidence_ladder.md  module_audit_2026_03_29.md  module_audit_cleanaxes_and_backtest_2026_03_29.md  module_audit_harp_archive_and_subnational_priors_2026_03_29.md  module_audit_historical_harp_and_shape_integrity_2026_03_29.md  module_gold_standards_2026_03_30.md  numeric_contract_and_shape_audit_2026_03_30.md  phase0_semantic_stack_and_chroma_review_2026_03_29.md  phase3_numeric_classification_2026_03_30.md  philippines_hiv_incumbent_competitive_context.md  pipeline_ground_truth_contract.md  probabilistic_defensibility_audit_2026_03_29.md  probabilistic_module_standard_2026_03_29.md  testing_and_sanity_strategy.md  wsl_gpu_phase3_bootstrap_2026_03_30.md
scripts/: bootstrap_wsl_gpu_env.ps1  bootstrap_wsl_gpu_env.sh  epigraph.py  probe_wsl_gpu_interop.py  serve_lighton_ocr_endpoint.py
tests/: conftest.py  test_boundary_shape_contract_pytest.py  test_gold_standard_contract_pytest.py  test_harp_archive_pipeline_pytest.py  test_registry_pytest.py  (+13 more)
(+52 files in other folders)
